Remove C++ from skills

--- a/khl/cv/skills.tex
+++ b/khl/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Kotlin, Java, Python, Julia, C/C++, Bash, LaTeX} % Skills
+    {Kotlin, Java, Python, Julia, Bash, LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
