--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -33,7 +33,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Programming language: SQL and Python.}
-        \item {Construct Bayesian models on the relation between the gender bias and criteria of funding application.}
+        \item {Construct Bayesian models on the relation between the gender bias and criteria of funding applications.}
         \item {Perform data cleaning and analysis.}
       \end{cvitems}
     }
