Add parallel computing to highlight

--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Programming language: Kotlin.}
-        \item {Create a computational framework for social scientists to simulate interstellar agent-based models.}
+        \item {Create a parallel computational framework for social scientists to simulate interstellar agent-based models.}
         \item {Build models to demonstrate the effect relativistic physics on interstellar societies.}
         \item {Develop a video game for PC and Android on top of the framework.}
       \end{cvitems}
