Add C++ to skill

--- a/khl/coverletter-ansys.tex
+++ b/khl/coverletter-ansys.tex
@@ -86,8 +86,8 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Adyen}
-  {Amsterdam}
+  {Ansys}
+  {Montreal, Quebec, CA, H3A3G4}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
@@ -125,7 +125,7 @@
 
 I am writing to express my strong interest in the R\&D Engineer II at ANSYS, as advertised on your company's website. With a background as a physicist working extensively in software development and a strong passion for pushing the boundaries of technology, I am excited about the prospect of contributing my skills to ANSYS's innovative projects.
 
-My journey began in the realm of physics, where I gained proficiency in a range of technical areas, including C programming, Linux systems, supercomputing, and simulations. These skills have prepared me well for the role of a research software engineer, equipping me to take on complex technical challenges with confidence. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise int the world of quantitative social sciences. During this time, I directed my efforts towards creating a sophisticated simulation framework and a game using Kotlin, tailored to study interstellar societies while considering relativistic physics — an endeavor that speaks to my ability to tackle intricate subject matter.
+My journey began in the realm of physics, where I gained proficiency in a range of technical areas, including C, Python, Linux systems, supercomputing, and simulations. These skills have prepared me well for the role of a research software engineer, equipping me to take on complex technical challenges with confidence. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise int the world of quantitative social sciences. During this time, I directed my efforts towards creating a sophisticated simulation framework and a game using Kotlin, tailored to study interstellar societies while considering relativistic physics — an endeavor that speaks to my ability to tackle intricate subject matter.
 
 I am particularly proud of my accomplishments in designing and implementing this simulation framework. While Kotlin may not be the most performant choice, I invested significant effort in optimizing data structures and algorithms to ensure efficient execution and parallelizability. This project exemplifies my dedication to achieving high performance through meticulous software engineering.
 
