--- a/khl/resume/resume.tex
+++ b/khl/resume/resume.tex
@@ -195,7 +195,7 @@
           \resumeItemListStart
             \resumeItem{Developed a parallel agent-based computational framework using coroutine}
             \resumeItem{Designed algorithms and data structures for optimal performance in relativistic spacetime}
-            \resumeItem{Automate unit tests and integration tests by JUnit and Github Action}
+            \resumeItem{Automated unit tests and integration tests by JUnit and Github Action}
             \resumeItem{Wrote documentation to illustrate how the framework should be used}
             \resumeItem{Built an interstellar knowledge dynamics model, analyzed the generated data by Python}
             \resumeItem{Published 2 papers about the framework and the model}
