--- a/khl/resume/resume-ing.tex
+++ b/khl/resume/resume-ing.tex
@@ -123,8 +123,8 @@
 
 
 %-----------EDUCATION-----------
-\section{Summary}
-Enthusiastic indie game developer and researcher with a strong background in physics and computational social science. Experienced in developing games and conducting innovative research. Passionate about utilizing advanced technologies to solve complex problems.
+%\section{Summary}
+%Enthusiastic indie game developer and researcher with a strong background in physics and computational social science. Experienced in developing games and conducting innovative research. Passionate about utilizing advanced technologies to solve complex problems.
 
 \section{Education}
   \resumeSubHeadingListStart
