Fix ansys cover letter

--- a/khl/coverletter-ansys.tex
+++ b/khl/coverletter-ansys.tex
@@ -123,7 +123,7 @@
 \begin{cvletter}
 
 
-I am writing to express my strong interest in the R\&D Engineer II at ANSYS, as advertised on your company's website. With a background as a physicist working extensively in software development and a strong passion for pushing the boundaries of technology, I am excited about the prospect of contributing my skills to ANSYS's innovative projects.
+I am writing to express my strong interest in the R\&D Engineer II position at ANSYS, as advertised on your company's website. With a background as a physicist working extensively in software development and a strong passion for pushing the boundaries of technology, I am excited about the prospect of contributing my skills to ANSYS's innovative projects.
 
 My journey began in the realm of physics, where I gained proficiency in a range of technical areas, including C, Python, Linux systems, supercomputing, and simulations. These skills have prepared me well for the role of a research software engineer, equipping me to take on complex technical challenges with confidence. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in the world of quantitative social sciences. During this time, I directed my efforts towards creating a sophisticated simulation framework and a game using Kotlin, tailored to study interstellar societies while considering relativistic physics — an endeavor that speaks to my ability to tackle intricate subject matter.
 
@@ -131,7 +131,7 @@ I am particularly proud of my accomplishments in designing and implementing this
 
 Parallel to my academic pursuits, I have actively engaged with open-source projects, focusing predominantly on C++. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This transition underscores my commitment to excellence in software development and my readiness to adapt to new challenges.
 
-Although my academic path has led me into an interdisciplinary field that is not strictly science/computer science, I believe that my ability to quickly grasp and master new technical concepts, combined with my proficiency in collaboration, makes me a strong candidate for the R\&D Engineer II. The experience gained from working in diverse teams during my PhD research further bolsters my aptitude as a collaborative team player, an essential quality for success in ANSYS's dynamic environment.
+Although my academic path has led me into an interdisciplinary field that is not strictly science/computer science, I believe that my ability to quickly grasp and master new technical concepts, combined with my proficiency in collaboration, makes me a strong candidate for the R\&D Engineer position. The experience gained from working in diverse teams during my PhD research further bolsters my aptitude as a collaborative team player, an essential quality for success in ANSYS's dynamic environment.
 
 As a Hong Kong citizen currently residing in the Netherlands, I am excited about the possibility of relocating to Canada under the open work permit policy. Thank you for considering my application. I am enthusiastic about the prospect of joining ANSYS and contributing my unique blend of skills and experiences to the team. I look forward to the opportunity for further discussion in an interview setting.
 
