Fix resume grammar

--- a/khl/resume/resume.tex
+++ b/khl/resume/resume.tex
@@ -176,7 +176,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
       \resumeItemListStart
         \resumeItem{Proposed models to detect black-hole horizon effects and gravitational wave lensing}
         \resumeItem{Contributed to a C codebase for model implementation}
-        \resumeItem{Ran simulations in supercomputer clusters}
+        \resumeItem{Ran simulations on supercomputer clusters}
         \resumeItem{Published 2 papers in reputable journals}
       \resumeItemListEnd
 
