Finalize roba letter

--- a/khl/coverletter-roba.tex
+++ b/khl/coverletter-roba.tex
@@ -86,12 +86,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Ansys}
-  {Montreal, Quebec, CA, H3A3G4}
+  {Robabank}
+  {Utrecht}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for R\&D Engineer II}
+\lettertitle{Job Application for Young Professional Program – Java Developer}
 % How the letter is opened
 \letteropening{Dear Hiring Manager,}
 % How the letter is closed
@@ -122,18 +122,18 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
+I am writing to express my strong interest in the "Young Professional Program – Java Developer" program at Rabobank. With a background as a software developer and a researcher involved in social science research, I am excited about the opportunity to work on software projects that have a real social impact.
 
-I am writing to express my strong interest in the R\&D Engineer II position at ANSYS, as advertised on your company's website. With a background as a physicist working extensively in software development and a strong passion for pushing the boundaries of technology, I am excited about the prospect of contributing my skills to ANSYS's innovative projects.
+My journey began in the realm of physics, where I gained proficiency in technical areas including C, Python, Linux systems, supercomputing, and simulations. These skills have equipped me well to take on complex technical challenges. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in computational social sciences. My project on analyzing gender biases in academic funding application systems has provided me with solid training in databases and SQL. To further challenge myself, I dedicated efforts to creating a sophisticated simulation framework and a game using Kotlin, which closely relates to Java. This showcases my capability to be a competent Java developer.
 
-My journey began in the realm of physics, where I gained proficiency in a range of technical areas, including C, Python, Linux systems, supercomputing, and simulations. These skills have prepared me well for the role of a research software engineer, equipping me to take on complex technical challenges with confidence. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in the world of quantitative social sciences. During this time, I directed my efforts towards creating a sophisticated simulation framework and a game using Kotlin, tailored to study interstellar societies while considering relativistic physics — an endeavor that speaks to my ability to tackle intricate subject matter.
+Parallel to my academic pursuits, I have actively engaged with open-source projects. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges. 
 
-I am particularly proud of my accomplishments in designing and implementing this simulation framework. While Kotlin may not be the most performant choice, I invested significant effort in optimizing data structures and algorithms to ensure efficient execution and parallelizability. This project exemplifies my dedication to achieving high performance through meticulous software engineering.
+While I don't have direct experience in finance, my interdisciplinary background has prepared me to understand both the technical and social science sides of issues like financial crime. I am enthusiastic about growing my career in this area at Rabobank.
 
-Parallel to my academic pursuits, I have actively engaged with open-source projects, focusing predominantly on C++. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges.
+It is a pity that the pandemic forced me to leave the Netherlands for two years, so I didn't have much chance to practice my Dutch. 
+I have recently made quite a few Dutch friends, and I promised them I will learn the language once I secure a job in the Netherlands.
 
-Although my academic path has led me into an interdisciplinary field that is not strictly science/computer science, I believe that my ability to quickly grasp and master new technical concepts, combined with my proficiency in collaboration, makes me a strong candidate for the R\&D Engineer position. The experience gained from working in diverse teams during my PhD research further bolsters my aptitude as a collaborative team player, an essential quality for success in ANSYS's dynamic environment.
-
-As a Hong Kong citizen currently residing in the Netherlands, I am excited about the possibility of relocating to Canada under the open work permit policy. Thank you for considering my application. I am enthusiastic about the prospect of joining ANSYS and contributing my unique blend of skills and experiences to the team. I look forward to the opportunity for further discussion in an interview setting.
+I am looking forward to the potential opportunity to contribute to Rabobank's projects and bring my skills to the team. Thank you for considering my application.
 
 %\lettersection{Why Me?}
 
