Fix letter for rabobank

--- a/khl/coverletter-rabobank.tex
+++ b/khl/coverletter-rabobank.tex
@@ -126,7 +126,7 @@ I am writing to express my strong interest in the "Young Professional Program â€
 
 My journey began in the realm of physics, where I gained proficiency in technical areas including C, Python, Linux systems, supercomputing, and simulations. These skills have equipped me well to take on complex technical challenges. Building upon this foundation, my PhD research took a unique trajectory by blending my expertise in computational social science. My project on analyzing gender biases in academic funding application systems has provided me with solid training in databases and SQL. To further challenge myself, I dedicated efforts to creating a sophisticated simulation framework and a game using Kotlin, which is closely related to Java. This showcases my capability to be a competent Java developer.
 
-Parallel to my academic pursuits, I have actively engaged with open-source projects. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges. 
+Parallel to my academic pursuits, I have actively engaged in open-source projects. These experiences have broadened my skill set, elevating me from a scientific programmer to a well-rounded software engineer. This underscores my commitment to excellence in software development and my readiness to adapt to new challenges. 
 
 While I don't have any direct experience in finance, my interdisciplinary background has prepared me to understand both the technical and social science sides of issues like financial crime. I am enthusiastic about growing my career in this area at Rabobank.
 
