--- a/khl/resume/resume-rabobank.tex
+++ b/khl/resume/resume-rabobank.tex
@@ -199,7 +199,7 @@ Enthusiastic software developer and researcher in computational social science, 
             \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations}
             \resumeItem{Automated testing using JUnit and GitHub Actions}
             \resumeItem{Authored comprehensive documentation}
-            \resumeItem{Built an interstellar knowledge dynamics model, analyzing generated data with Python}
+            \resumeItem{Built an interstellar knowledge dynamics model, analyzed generated data with Python}
             \resumeItem{Published 2 papers about the framework and model}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
