Fix ansys resume

--- a/khl/resume/resume-ansys.tex
+++ b/khl/resume/resume-ansys.tex
@@ -124,7 +124,7 @@
 
 %-----------EDUCATION-----------
 \section{Summary}
-Enthusiastic indie game developer and researcher with a strong background in physics and computational social science. Experienced in developing games and conducting innovative research. Passionate about utilizing advanced technologies to solve complex problems.
+Enthusiastic indie game developer and researcher with a strong background in physics and computational social science. Experienced in software development and conducting innovative research. Passionate about utilizing advanced technologies to solve complex problems.
 
 \section{Education}
   \resumeSubHeadingListStart
