--- a/khl/coverletter-rabobank.tex
+++ b/khl/coverletter-rabobank.tex
@@ -86,7 +86,7 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Robabank}
+  {Rabobank}
   {Utrecht}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
