Update astropy cover letter

--- a/khl/coverletter-astropy.tex
+++ b/khl/coverletter-astropy.tex
@@ -122,11 +122,11 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my enthusiastic interest in the "Research Software Engineer" position of Astropy. I am impressed by Astropy's commitment to enhancing the sustainability of open source scientific software, and I am genuinely excited about the opportunity to contribute to the project.
+I am writing to express my enthusiastic interest in the "Research Software Engineer" position of Astropy. I am impressed by the commitment of the Astropy team to enhancing the sustainability of open source scientific software, and I am genuinely excited about the opportunity to contribute to the project.
 
-My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well with the requirements of the role. My experience spans a range of technical domains, including C, Python, SQL, Linux systems, and simulations. To further challenge myself, I have crafted a sophisticated agent-based simulation framework and a game using Kotlin. The framework has a strong affinity to physics, and it has proper design pattern, unit/integration tests, and documentations. This showcases my capability to excel as a competent developer 
+My academic journey has been a unique blend of physics, astrophysics, and computational social science, providing me with a diverse and robust skill set that aligns well the role. My experience spans a range of technical domains, including C, Python, SQL, Linux systems, and simulations. To further challenge myself, I have crafted a sophisticated agent-based simulation framework and a game using Kotlin. The framework has a strong affinity to physics, and it has proper design pattern, unit/integration tests, and documentations. This showcases my capability to excel as a competent developer.
 
-Beyond my academic pursuits, I have actively engaged in open-source projects, mastering the art of learning, debugging, and contributing to unfamiliar codebases. This underscores my passion for open-source software and my readiness to adapt to novel challenges.
+Beyond my academic pursuits, I have actively engaged in open-source projects. My commitment to open-source projects has honed my abilities in learning, debugging, and contributing to unfamiliar codebases, reflecting my passion for open-source software and my readiness to embrace novel challenges.
 
 During my PhD study, I collaborated with individuals from diverse nationalities and cultural backgrounds, often in remote settings due to the pandemic. Drawing from this experience, I am confident in my ability to effectively collaborate with the Astropy team, leveraging my proven skills in remote communication and teamwork.
 
