--- a/khl/resume/resume-original.tex
+++ b/khl/resume/resume-original.tex
@@ -189,7 +189,7 @@
       \resumeProjectHeading
           {\textbf{KSerGen} $|$ \emph{Kotlin, KSP, Gradle, Maven Central}}{Apr. 2023 -- present}
           \resumeItemListStart
-            \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchy}
+            \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchies}
             \resumeItem{Published the plugin to Maven Central}
           \resumeItemListEnd
       \resumeProjectHeading
