--- a/khl/resume/resume-jetbrain.tex
+++ b/khl/resume/resume-jetbrain.tex
@@ -191,7 +191,7 @@ Passionate about advancing the Kotlin language/ecosystem.
       \resumeProjectHeading
           {\textbf{KSerGen} $|$ \emph{Kotlin, KSP, Gradle, Maven Central}}{Apr. 2023 -- present}
           \resumeItemListStart
-            \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchy}
+            \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchies}
             \resumeItem{Published the plugin to Maven Central}
           \resumeItemListEnd
       \resumeProjectHeading
