--- a/khl/resume/resume-ansys.tex
+++ b/khl/resume/resume-ansys.tex
@@ -212,7 +212,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and LIbraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
+     \textbf{Frameworks and Libraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
      \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
     }}
  \end{itemize}
