--- a/khl/resume/resume-astropy.tex
+++ b/khl/resume/resume-astropy.tex
@@ -215,7 +215,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and LIbraries}{: Ktor, KSP, libGDX, pandas, NumPy, Matplotlib} \\
+     \textbf{Frameworks and Libraries}{: Ktor, KSP, libGDX, pandas, NumPy, Matplotlib} \\
      \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
     }}
  \end{itemize}
