--- a/khl/resume/resume-jetbrain.tex
+++ b/khl/resume/resume-jetbrain.tex
@@ -214,7 +214,7 @@ Passionate about advancing the Kotlin language/ecosystem.
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and LIbraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
+     \textbf{Frameworks and Libraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
      \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
     }}
  \end{itemize}
