--- a/khl/cv/research_highlights.tex
+++ b/khl/cv/research_highlights.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Research/Work Highlights}
+\cvsection{Research/Work Eperience}
 
 
 %-------------------------------------------------------------------------------
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {Relativitization: an agent-based simulation framework in 4D, relativistic spacetime} % Research project
-    {Research software/game development} % Research organization
+    {Self-employment} % Research project
+    {Indie game developer} % Research organization
     {Leiden, The Netherlands} % Location
-    {2021 - present} % Date(s)
+    {Mar. 2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Programming language: Kotlin.}
@@ -26,10 +26,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {Criteria Project} % Research project
+    {Researcher} % Research project
     {Research on Research Institute (RORI)} % Research organization
     {Leiden, The Netherlands} % Location
-    {2020 - present} % Date(s)
+    {Jan. 2020 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Programming language: SQL and Python.}
@@ -40,10 +40,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {Gravitational waves modeling and data analysis} % Research project
-    {LIGO Scientific Collaboration (LSC) Projects} % Research organization
+    {Researcher} % Research project
+    {LIGO Scientific Collaboration (LSC)} % Research organization
     {Hong Kong, China} % Location
-    {2016 - 2018} % Date(s)
+    {Sep. 2016 - Aug. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Programming language: C and Python.}
