--- a/khl/cv/education.tex
+++ b/khl/cv/education.tex
@@ -14,7 +14,7 @@
     {Ph.D. in Quantitative Science Studies} % Degree
     {Centre for Science and Technology Studies, Leiden University} % Institution
     {Leiden, The Netherlands} % Location
-    {2019 - present} % Date(s)
+    {Jun. 2019 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Expected graduation: early 2024}
@@ -23,23 +23,23 @@
 
 %---------------------------------------------------------
   \cventry
-    {M.Phil. in Physics} % Degree
+    {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics} % Degree
     {The Chinese University of Hong Kong} % Institution
     {Hong Kong, China} % Location
-    {2016 - 2018} % Date(s)
+    {Sep. 2012 - Aug. 2018} % Date(s)
     {}
 
 %---------------------------------------------------------
-  \cventry
-    {B.Sc. in Physics} % Degree
-    {United College, The Chinese University of Hong Kong} % Institution
-    {Hong Kong, China} % Location
-    {2012 - 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Minor in Mathematics}
-      \end{cvitems}
-    }
+%  \cventry
+%    {B.Sc. in Physics} % Degree
+%    {United College, The Chinese University of Hong Kong} % Institution
+%    {Hong Kong, China} % Location
+%    {2012 - 2016} % Date(s)
+%    {
+%      \begin{cvitems} % Description(s) bullet points
+%        \item {Minor in Mathematics}
+%      \end{cvitems}
+%    }
 
 %---------------------------------------------------------
 \end{cventries}
