--- a/khl/resume/resume-challenge.tex
+++ b/khl/resume/resume-challenge.tex
@@ -147,6 +147,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
         \resumeItem{Implemented multiplayer functionality and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Created utility-based AI to determine actions from complex observations}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
       \resumeItemListEnd
