--- a/khl/resume/resume-kotlin.tex
+++ b/khl/resume/resume-kotlin.tex
@@ -149,6 +149,7 @@ Passionate about utilizing advanced technologies to solve complex problems.
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
         \resumeItem{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Created utility-based AI to determine actions from complex observations}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
       \resumeItemListEnd
