--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -112,7 +112,7 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{cv/education.tex}
-\input{cv/research_highlights.tex}
+\input{cv/experience.tex}
 \input{cv/skills.tex}
 \input{cv/selected_academic_publications.tex}
 \input{cv/presentations.tex}
