--- a/khl/cv/experience.tex
+++ b/khl/cv/experience.tex
@@ -17,10 +17,11 @@
     {Mar. 2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Programming language: Kotlin.}
-        \item {Create a parallel computational framework for social scientists to simulate interstellar agent-based models.}
-        \item {Build models to demonstrate the effect of relativistic physics on interstellar societies.}
-        \item {Develop a video game for PC and Android on top of the framework.}
+        \item{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
+        \item{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
+        \item{Created utility-based AI to determine actions from complex observations}
+        \item{Managed a codebase with 60K+ lines of code via Git}
+        \item{Presented the game at various conferences, including KotlinConf}
       \end{cvitems}
     }
 
@@ -32,9 +33,10 @@
     {Jan. 2020 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Programming language: SQL and Python.}
-        \item {Construct Bayesian models on the relation between the gender bias and criteria of funding applications.}
-        \item {Perform data cleaning and analysis.}
+        \item{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
+        \item{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
+        \item{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
+        \item{Collaborated with an international team spanning 5 countries}
       \end{cvitems}
     }
 
@@ -46,9 +48,10 @@
     {Sep. 2016 - Aug. 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Programming language: C and Python.}
-        \item {Proposed methods to constrain black-hole horizon effects.}
-        \item {Ran simulations of detecting intermediate-mass black hole by gravitational wave lensing.}
+        \item{Proposed models to detect black-hole horizon effects and gravitational wave lensing}
+        \item{Contributed to a C codebase for model implementation}
+        \item{Ran simulations on supercomputer clusters}
+        \item{Published 2 papers in reputable journals}
       \end{cvitems}
     }
 
