--- a/khl/cv/skills.tex
+++ b/khl/cv/skills.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{Techinical Skills}
 
 
 %-------------------------------------------------------------------------------
@@ -11,13 +11,18 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Kotlin, Java, SQL, Python, Julia, Bash, LaTeX} % Skills
+    {Languages} % Category
+    {Kotlin, Java, SQL, Python, Julia, C/C++, Bash, \LaTeX} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Languages} % Category
-    {Chinese (Cantonese and Mandarin), English} % Skills
+    {Frameworks and Libraries} % Category
+    {Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Tools} % Category
+    {Git, Linux, Gradle, Vim, Android Studio, IntelliJ} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
