--- a/khl/resume/resume-kotlin.tex
+++ b/khl/resume/resume-kotlin.tex
@@ -169,6 +169,7 @@ Passionate about utilizing advanced technologies to solve complex problems.
       {Research of research institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
         \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
+        \resumeItem{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
         \resumeItem{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
         \resumeItem{Collaborated with an international team spanning 5 countries}
     \resumeItemListEnd
