Add website details in CV

--- a/khl/cv.tex
+++ b/khl/cv.tex
@@ -68,8 +68,8 @@
 \email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
-\github{Adriankhl}
-\linkedin{adrian-k-h-lai}
+\github{github.com/adriankhl}
+\linkedin{linkedin.com/in/adrian-k-h-lai}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -113,6 +113,7 @@
 %-------------------------------------------------------------------------------
 \input{cv/education.tex}
 \input{cv/experience.tex}
+\input{cv/projects.tex}
 \input{cv/skills.tex}
 \input{cv/selected_academic_publications.tex}
 \input{cv/presentations.tex}
