--- a/khl/cv/selected_academic_publications.tex
+++ b/khl/cv/selected_academic_publications.tex
@@ -6,16 +6,16 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{Software}
-
-\begin{refsection}
-	\nocite{relativitization}
-
-	\printbibliography[
-	heading=none,
-	sorting=ydnt
-	]
-\end{refsection}
+%\cvsubsection{Software}
+%
+%\begin{refsection}
+%	\nocite{relativitization}
+%
+%	\printbibliography[
+%	heading=none,
+%	sorting=ydnt
+%	]
+%\end{refsection}
 
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
