--- a/khl/resume/resume-original.tex
+++ b/khl/resume/resume-original.tex
@@ -130,10 +130,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019-- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present $|$ Expected graduation: early 2024}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
-      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 - Aug. 2018}
+      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
   \resumeSubHeadingListEnd
 
 
@@ -143,10 +143,11 @@
 
     \resumeSubheading
       {Indie game developer}{Leiden, the Netherlands}
-      {Self-employment}{Mar. 2021 -- Present}
+      {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
         \resumeItem{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
+        \resumeItem{Created utility-based AI to determine actions from complex observations}
         \resumeItem{Managed a codebase with 60K+ lines of code via Git}
         \resumeItem{Presented the game at various conferences, including KotlinConf}
       \resumeItemListEnd
@@ -166,6 +167,7 @@
       {Research of research institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
         \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
+        \resumeItem{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
         \resumeItem{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
         \resumeItem{Collaborated with an international team spanning 5 countries}
     \resumeItemListEnd
@@ -193,7 +195,7 @@
             \resumeItem{Published the plugin to Maven Central}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- Present}
+          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
           \resumeItemListStart
             \resumeItem{Developed a parallel agent-based computational framework utilizing coroutines}
             \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations}
