--- a/khl/resume/resume-astropy.tex
+++ b/khl/resume/resume-astropy.tex
@@ -130,10 +130,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019-- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
-      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 - Aug. 2018}
+      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
   \resumeSubHeadingListEnd
 
 
@@ -143,7 +143,7 @@
 
     \resumeSubheading
       {Indie game developer}{Leiden, the Netherlands}
-      {Self-employment}{Mar. 2021 -- Present}
+      {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
         \resumeItem{Implemented a HTTP-based server-client architecture and a user-friendly graphical interface for PC and Android}
@@ -188,7 +188,7 @@
     \resumeSubHeadingListStart
 
       \resumeProjectHeading
-          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- Present}
+          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
           \resumeItemListStart
             \resumeItem{Repository: \href{https://github.com/adriankhl/relativitization}{\underline{github.com/adriankhl/relativitization}}}
             \resumeItem{Developed a parallel agent-based computational framework in relativistic spacetime}
