--- a/khl/resume/resume-challenge.tex
+++ b/khl/resume/resume-challenge.tex
@@ -130,10 +130,10 @@ Enthusiastic indie game developer and researcher with a strong background in phy
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Quantitative Science Studies}{Jun. 2019-- present}
+      {Ph.D. in Quantitative Science Studies}{Jun. 2019 -- present}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
-      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 - Aug. 2018}
+      {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Aug. 2018}
   \resumeSubHeadingListEnd
 
 
@@ -143,7 +143,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
 
     \resumeSubheading
       {Indie game developer}{Leiden, the Netherlands}
-      {Self-employment}{Mar. 2021 -- Present}
+      {Self-employment}{Mar. 2021 -- present}
       \resumeItemListStart
         \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
         \resumeItem{Implemented multiplayer functionality and a user-friendly graphical interface for PC and Android}
@@ -195,7 +195,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
             \resumeItem{Published the plugin to Maven Central}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- Present}
+          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
           \resumeItemListStart
             \resumeItem{Developed a parallel agent-based computational framework utilizing coroutines}
             \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations}
