--- a/khl/cv/selected_academic_publications.tex
+++ b/khl/cv/selected_academic_publications.tex
@@ -20,16 +20,16 @@
 %-------------------------------------------------------------------------------
 %	SUBSECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsubsection{Preprints}
-
-\begin{refsection}
-    \nocite{lai_kwun_hang_2023_8140436}
-
-	\printbibliography[
-	heading=none,
-	sorting=ydnt
-	]
-\end{refsection}
+%\cvsubsection{Preprints}
+%
+%\begin{refsection}
+%    \nocite{lai_kwun_hang_2023_8140436}
+%
+%	\printbibliography[
+%	heading=none,
+%	sorting=ydnt
+%	]
+%\end{refsection}
 
 
 %-------------------------------------------------------------------------------
