--- a/khl/cv/education.tex
+++ b/khl/cv/education.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cventry
     {Ph.D. in Quantitative Science Studies} % Degree
-    {Centre for Science and Technology Studies, Leiden University} % Institution
+    {Leiden University} % Institution
     {Leiden, The Netherlands} % Location
     {Jun. 2019 - present} % Date(s)
     {
